--- a/sochi/index.html
+++ b/sochi/index.html
@@ -4,21 +4,28 @@ title: Sochi 2014 visualization with Chartmander.js
 ---
 <div class="container">
   <div class="row">
-    <!-- <h1>Sochi 2014</h1> -->
-<!--     <div class="col-sm-3">
-    <ul class="nav nav-pills nav-stacked sidebar">
-      <li><a href="#">Overview</a></li>
-      <li><a href="#">Countries</a></li>
-      <li><a href="#">Atletes</a></li>
-    </ul>
-    </div> -->
-    <div class="col-sm-9">
+    <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1">
+      <header>
+        <h1>Sochi</h1>
+      </header>
+      <ul class="nav nav-tabs top-nav">
+        <li class="active"><a href="{{site.sochi}}"><i class="ion-speedometer"></i>Overview</a></li>
+        <li><a href="{{site.sochi}}countries.html"><i class="ion-earth"></i>Countries</a></li>
+        <li><a href="{{site.sochi}}athletes.html"><i class="ion-ios7-people"></i>Athletes</a></li>
+      </ul>
       <section class="page">
-        <h2>Summary</h2>
-        <a href="#" class="update">update</a>
-        <div class="panel panel-default">
+        <!-- <a href="#" class="update">update</a> -->
+        <div class="panel panel-sochi">
+          <div class="panel-heading">Top athletes</div>
           <div class="panel-body">
-            <canvas id="athletes" width="300" height="200"></canvas>
+            <canvas id="top-athletes" width="750" height="200"></canvas>
+            <!-- <canvas id="athletes" width="150" height="150"></canvas> -->
+          </div>
+        </div>
+        <div class="panel panel-sochi">
+          <div class="panel-heading">Top Countries</div>
+          <div class="panel-body">
+            <canvas id="top-countries" width="750" height="200"></canvas>
           </div>
         </div>
       </section>
@@ -44,6 +51,19 @@ $('.update').on('click', function (e) {
   athletes.update(dataFactory(["Men", "Women"], ["xx"], 50))
 })
 
+var Medal = function (country, count) {
+  return {
+    "label": country,
+    "value": count
+  }
+}
+
+getMedalsByCountries(0, function (chartData) {
+  var topCountries = new Chartmander("top-countries").CategoryBar(parseMedals(chartData));
+    topCountries.margin({ top: 0, left:0, right:0, bottom:0});
+});
+
+var topAthletes = new Chartmander("top-athletes").CategoryBar();
 
 var athletes = new Chartmander("athletes").Pie(athletesData)
     athletes.colors(["#30daff", "#ff4d5b"]);
