--- a/sochi/index.html
+++ b/sochi/index.html
@@ -52,7 +52,7 @@ Chartmander.addChart(function(){
   var chart = Chartmander.models.pieChart("circle");
     chart
       .margin({left: 30})
-      // .colors(["blue", "yellow"])
+      .colors(["yellow", "orangered"])
       ;
     // Data after settings
     chart.render(athletesData);
