--- a/examples/index.html
+++ b/examples/index.html
@@ -13,60 +13,65 @@ title: Chartmander.js Examples
   </div>
 </div>
 <canvas id="baroFrajeris" width="800" height="400"></canvas>
+<canvas id="pirat" width="800" height="400"></canvas>
 <script>
 
-	var baroDato = dataFactory(["Hau", "Mnau"], yearByMonths(1), 20+Math.random()*300);
+  var baroDato = dataFactory(["Hau", "Mnau"], yearByMonths(1), 20+Math.random()*300);
 
-	Chartmander.addChart(function(){
-	  var chart = Chartmander.models.barChart("baroFrajeris");
-	    // Data after settings
-	    chart.render(baroDato);
-	    return chart;
-	});
+  Chartmander.addChart(function(){
+    var chart = Chartmander.models.barChart("baroFrajeris");
+      // Data after settings
+      chart.render(baroDato);
+      return chart;
+  }).addChart(function(){
+    var chart = Chartmander.models.lineChart("pirat");
+      chart.render(baroDato);
+      return chart;
+  });
 
-	// var angleStep = 2*Math.PI/100
-	// 	, currAngle = angleStep
-	// 	, dayStart = new Date().getTime()
-	// 	, currDay = 0
-	// 	, offset = 60*60*24*1000
-	// 	, sineWave = {
-	// 		"title": "sine",
-	// 		"values": []
-	// 	}
-	// 	, cosineWave = {
-	// 		"title": "cosine",
-	// 		"values": []
-	// 	}
-	// 	;
+  // var angleStep = 2*Math.PI/100
+  //  , currAngle = angleStep
+  //  , dayStart = new Date().getTime()
+  //  , currDay = 0
+  //  , offset = 60*60*24*1000
+  //  , sineWave = {
+  //    "title": "sine",
+  //    "values": []
+  //  }
+  //  , cosineWave = {
+  //    "title": "cosine",
+  //    "values": []
+  //  }
+  //  ;
 
-	// for (var i = 0; i<100; i++) {
-	// 	sineWave.values.push({
-	// 		"label": dayStart + currDay*offset,
-	// 		"value": 3*Math.sin(currAngle)
-	// 	});
-	// 	cosineWave.values.push({
-	// 		"label": dayStart + currDay*offset,
-	// 		"value": 3*Math.cos(currAngle)
-	// 	});
-	// 	currAngle += angleStep;
-	// 	currDay++;
-	// }
+  // for (var i = 0; i<100; i++) {
+  //  sineWave.values.push({
+  //    "label": dayStart + currDay*offset,
+  //    "value": 3*Math.sin(currAngle)
+  //  });
+  //  cosineWave.values.push({
+  //    "label": dayStart + currDay*offset,
+  //    "value": 3*Math.cos(currAngle)
+  //  });
+  //  currAngle += angleStep;
+  //  currDay++;
+  // }
 
-	// var realtime = new Chartmander("realtime").Line([sineWave, cosineWave]);
-	// 	realtime.pointRadius(0).areaVisible(false).lineWidth(3)
-	// 	setInterval(function () {
-	// 		sineWave.values.shift();
-	// 		cosineWave.values.shift();
-	// 		sineWave.values.push({
-	// 			label: dayStart + currDay*offset,
-	// 			value: 3*Math.sin(currAngle)
-	// 		});	
-	// 		cosineWave.values.push({
-	// 			label: dayStart + currDay*offset,
-	// 			value: 3*Math.cos(currAngle)
-	// 		});
-	// 		currAngle += angleStep;
-	// 		currDay++;
-	// 		realtime.update([sineWave, cosineWave])
-	// 	}, 50)
+  // var realtime = new Chartmander("realtime").Line([sineWave, cosineWave]);
+  //  realtime.pointRadius(0).areaVisible(false).lineWidth(3)
+  //  setInterval(function () {
+  //    sineWave.values.shift();
+  //    cosineWave.values.shift();
+  //    sineWave.values.push({
+  //      label: dayStart + currDay*offset,
+  //      value: 3*Math.sin(currAngle)
+  //    }); 
+  //    cosineWave.values.push({
+  //      label: dayStart + currDay*offset,
+  //      value: 3*Math.cos(currAngle)
+  //    });
+  //    currAngle += angleStep;
+  //    currDay++;
+  //    realtime.update([sineWave, cosineWave])
+  //  }, 50)
 </script>
