--- a/examples/index.html
+++ b/examples/index.html
@@ -22,11 +22,14 @@ title: Chartmander.js Examples
   Chartmander.addChart(function(){
     var chart = Chartmander.models.barChart("baroFrajeris");
       // Data after settings
-      chart.render(baroDato);
+      chart
+        .render(baroDato);
       return chart;
   }).addChart(function(){
     var chart = Chartmander.models.lineChart("pirat");
-      chart.render(baroDato);
+      chart
+        .colors(["yellow", "orange"])
+        .render(baroDato);
       return chart;
   });
 
@@ -34,7 +37,8 @@ title: Chartmander.js Examples
     Chartmander.addChart(function(){
       var chart = Chartmander.models.barChart("baroFrajeris");
         // Data after settings
-        chart.render(baroDato);
+        chart
+          .render(baroDato);
         return chart;
     })
   })
